[package]
name = "kanye"
version = "0.1.1"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"
description = "KAAS (Kanye As A Service)"
license = "Apache-2.0"
keywords = ["quote", "kanye"]
repository = "https://github.com/DefunctLizard/kanye-rs/"
documentation = "https://docs.rs/kanye"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.0"
clap = "2.33.3"
colored = "2.0.0"
serde_json = "1.0.64"